# glimpse

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.TODOs/: recursive-index-md-sections.md  users-toml-cli.md
ideas/: justified-gallery-layout.md  recursive-index-md-sections.md  share-link.md
plans/: 2026-04-22-design.md
src/: config.rs  main.rs  users.rs  viewer.rs  watcher.rs
src/content/: mod.rs
src/media/: mod.rs
src/server/: mod.rs
src/theme/: mod.rs
themes/default/static/: lightbox.js  style.css
themes/default/templates/: 404.html  base.html  index.html  login.html  post.html
