[package]
name = "glimpse-rs"
version = "0.1.0"
edition = "2024"
default-run = "glimpse-rs"

[dependencies]
anyhow = "1"
arc-swap = "1"
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie-private"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
minijinja = { version = "2", features = ["loader"] }
notify = "6"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
