[package]
name = "glimpse-rs"
version = "0.1.0"
edition = "2024"
default-run = "glimpse-rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arc-swap = "1"
argon2 = "0.5"
atom_syndication = "0.12"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie-private"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
kamadak-exif = "0.6"
sha2 = "0.10"
minijinja = { version = "2", features = ["loader"] }
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
toml_edit = "0.22"
rpassword = "7"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
